--- a/src/components/Donate/donate.css
+++ b/src/components/Donate/donate.css
@@ -1,119 +1,92 @@
 * {
-    margin: 0;
-    padding: 0;
-}
-
-.header {
-    background-color: black;
-    height: 50px;
-    overflow: hidden;
-
-}
-
-.left {
-    /* border: 2px solid red; */
-    display: inline-block;
-    position: absolute;
-    left: 34px;
-    top: 20px;
-}
-
-.left img {
-    width: 107px;
-    filter: invert(100%);
-    height: 73px;
-}
-
-.left div {
-    text-align: center;
-    font-size: 16px;
-
-}
-
-.right {
-    position: absolute;
-    right: 34px;
-    top: 20px;
-    /* border: 2px solid yellow; */
-    display: inline-block;
-}
-
-.header a {
-    text-align: right;
-    color: white;
-    padding: 144px 166px;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #EADCD9;
-    text-align: center;
+  background-image: url(login-vector.svg);
+  background-size: 700px;
+  background-position: left;
+  background-repeat: no-repeat;
+  background-color: white;
+  text-align: center;
 }
 
 .container {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 10px;
-    width: 400px;
-    height: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 10px;
+  width: 400px;
+  height: auto;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.72) 0%,
+    rgba(229, 229, 229, 0.67) 100%
+  );
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(20px);
+  border-radius: 20px;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.72) 0%,
+    rgba(229, 229, 229, 0.67) 100%
+  );
 }
 
 .container h2 {
-    text-align: center;
-    font-size: 20px;
-    padding: 20px;
-
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
 }
 
 .container h3 {
-    text-align: center;
-    font-size: 15px;
-    padding: 10px;
-
+  text-align: center;
+  font-size: 15px;
+  padding: 10px;
 }
-.donor-age{
-    padding-right:5px;
+.donor-age {
+  padding-right: 5px;
 }
-.blood-group{
-    padding-left:5px;
+.blood-group {
+  padding-left: 5px;
 }
 
 .form-group {
-    padding-bottom: 8px;
+  padding-bottom: 8px;
 }
 
 .container button {
-    display: block;
-    width: 20%;
-    margin: 15px auto;
+  display: block;
+  width: 20%;
+  margin: 15px auto;
 }
-.upload-container{
-    color:grey;
-    border: 1px solid grey;
+.upload-container {
+  color: grey;
+  border: 1px solid grey;
 }
-.upload-container:hover{
-    border:1px solid black;
+.upload-container:hover {
+  border: 1px solid black;
 }
 /* .upload{
     width:10%;
 } */
 .btn {
-    margin: 0px 9px;
-    background-color: rgb(73, 70, 70);
-    color: white;
-    /* padding: 4px 14px; */
-    /* border: 2px solid grey; */
-    border-radius: 10px;
-    /* font-size: 20px; */
-    cursor: pointer;
-    text-align: center;
+  margin: 0px 9px;
+  background-color: rgb(73, 70, 70);
+  color: white;
+  /* padding: 4px 14px; */
+  /* border: 2px solid grey; */
+  border-radius: 10px;
+  /* font-size: 20px; */
+  cursor: pointer;
+  text-align: center;
 }
 
 .btn:hover {
-    background-color: rgb(39, 36, 36);
+  background-color: rgb(39, 36, 36);
 }
 /* .form-group input {
     text-align: center;
@@ -126,14 +99,14 @@ body {
     border-radius: 8px;
     font-family: 'Baloo Bhai 2', cursive;
 } */
-label{
-    font-size: 15px;
+label {
+  font-size: 15px;
 }
-h2{
-    font-family: 'Times New Roman', Times, serif;
+h2 {
+  font-family: "Times New Roman", Times, serif;
 }
-h3{
-    font-family: 'Times New Roman', Times, serif;
+h3 {
+  font-family: "Times New Roman", Times, serif;
 }
 /* .form-group{
     font-family: 'Times New Roman', Times, serif;
