--- a/verified.css
+++ b/verified.css
@@ -35,6 +35,7 @@ body{
     background-color:whitesmoke;
     backdrop-filter: blur(76px);
     border-radius: 5px;
+    position: relative;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.72) 0%, rgba(229, 229, 229, 0.67) 100%);
 box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
 backdrop-filter: blur(20px);
@@ -59,17 +60,28 @@ h2{
     width: 310px;
     justify-content: center;
     border-radius: 4px;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    position: absolute;
+    
+    
 }
 
-.img{
+
+
+.image{
     align-items: center;
+    
 }
 
 p{
     text-align: center;
 
 }
+
+
 
 
 
