--- a/verify.css
+++ b/verify.css
@@ -59,8 +59,13 @@ h2{
     width: 310px;
     justify-content: center;
     border-radius: 4px;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
 }
+
+
 
 .img{
     align-items: center;
