--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,44 +1,32 @@
 .header {
-  background-color: rebeccapurple;
+  background-color: #423d3d;
+  height: 60px;
 }
 
 .header__wrap {
-  align-items: baseline;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin: 0 auto;
-  max-width: 640px;
-  padding: 1rem 0;
-}
-
-.header__heading {
-  margin: 0;
-  font-size: 2rem;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 100%;
+    padding: 8px 16px;
+    height: 100%;
 }
 
 .header__nav {
-  font-size: 1.25rem;
-  margin-top: 0;
-  text-align: right;
+    font-size: 16px;
+    min-width: 200px;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .header__link {
-  color: white;
-  font-weight: bold;
-  margin-left: 0.75rem;
-  margin-top: 0;
-  padding: 0.25rem;
-  text-decoration: none;
-}
-
-.header__linkHome {
-  font-size: 2rem;
-  margin-left: -0.25rem;
+  color: #ddd;
 }
 
 .header__link:hover,
 .header__link:active,
 .header__link:focus {
-  background: white;
-  color: rebeccapurple;
+  color: #fff;
 }
