--- a/src/components/Donate/donate.css
+++ b/src/components/Donate/donate.css
@@ -3,15 +3,6 @@
   padding: 0;
 }
 
-body {
-  background-image: url(login-vector.svg);
-  background-size: 700px;
-  background-position: left;
-  background-repeat: no-repeat;
-  background-color: white;
-  text-align: center;
-}
-
 .container {
   position: absolute;
   left: 50%;
@@ -56,6 +47,7 @@ body {
 
 .form-group {
   padding-bottom: 8px;
+  text-align: center;
 }
 
 .container button {
@@ -70,45 +62,27 @@ body {
 .upload-container:hover {
   border: 1px solid black;
 }
-/* .upload{
-    width:10%;
-} */
-.btn {
-  margin: 0px 9px;
-  background-color: rgb(73, 70, 70);
-  color: white;
-  /* padding: 4px 14px; */
-  /* border: 2px solid grey; */
-  border-radius: 10px;
-  /* font-size: 20px; */
-  cursor: pointer;
-  text-align: center;
-}
 
-.btn:hover {
-  background-color: rgb(39, 36, 36);
-}
-/* .form-group input {
-    text-align: center;
-    display: block;
-    width: 508px;
-    padding: 1px;
-    border: 2px solid black;
-    margin: 11px auto;
-    font-size: 25px;
-    border-radius: 8px;
-    font-family: 'Baloo Bhai 2', cursive;
-} */
 label {
   font-size: 15px;
 }
 h2 {
-  font-family: "Times New Roman", Times, serif;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 48px;
 }
 h3 {
-  font-family: "Times New Roman", Times, serif;
+    font-family: 'Montserrat', sans-serif;
 }
-/* .form-group{
-    font-family: 'Times New Roman', Times, serif;
+.FormControl{
+    background-color: white;
 
-} */
+}
+
+/* Main Section css */
+.main-section {
+  background-image: url('login-vector.svg');
+  background-size: 100%;
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+  height: 100%;
+}
