--- a/src/components/Layout/global.css
+++ b/src/components/Layout/global.css
@@ -6,6 +6,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   box-sizing: border-box;
+  height: 100%;
 }
 
 *,
@@ -27,12 +28,10 @@ li {
   margin-top: 0.25rem;
 }
 
-code {
-  background: lightgrey;
-  border-radius: 0.125rem;
-  font-weight: bold;
-  padding: 0.125rem 0.25rem;
+#___gatsby {
+ height: inherit;
 }
+
 .flex {
   display: flex;
 }
