--- a/src/components/LandingPage/index.scss
+++ b/src/components/LandingPage/index.scss
@@ -1,5 +1,4 @@
-$light-grey: #dedede;
-$white: #ffffff;
+@import "../default.scss";
 
 .landing-container {
   background-image: url("../../images/coverpage.png");
