--- a/src/components/Donate/donate.css
+++ b/src/components/Donate/donate.css
@@ -1,8 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 .container {
   position: absolute;
   left: 50%;
@@ -67,20 +62,19 @@ label {
   font-size: 15px;
 }
 h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 48px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 48px;
 }
 h3 {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
-.FormControl{
-    background-color: white;
-
+.FormControl {
+  background-color: white;
 }
 
 /* Main Section css */
 .main-section {
-  background-image: url('login-vector.svg');
+  background-image: url("login-vector.svg");
   background-size: 100%;
   background-position: 100% 100%;
   background-repeat: no-repeat;
