--- a/src/components/DonateAnOrgan/donateAnOrgan.scss
+++ b/src/components/DonateAnOrgan/donateAnOrgan.scss
@@ -1,44 +1,22 @@
-* {
-  font-family: 'Montserrat', sans-serif;
-    margin: 0px;
-    padding: 0px;
-  }
-  .container {
-    width: 100%;
-    height: 700px; 
-    border-radius: 5px;
-    border: 2px solid black; 
-    background-color: #E5E5E5; 
-    flex-wrap: wrap;
-    background-image:url(/vector\ 3.svg);
-    background-size: 700px;
-    background-position: center;
+@import "../default.scss";
+.donate-organ-container {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+  background-color: $light-grey;
+  align-items: center;
+  justify-content: center;
+
+  form {
+    width: 650px;
+    height: 650px;
+    background-image: url("../../images/donate_an_organ.svg");
+    background-position: 100%;
+    background-size: contain;
     background-repeat: no-repeat;
   }
-  .navbar {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .img1 {
-    width: 80px;
-    height: 3vh;
-    margin-left: 13px;
-  }
-  .img2 {
-    width: 80px;
-    height: 3vh;
-    margin-right: 13px;
-    border-radius: 50%;
-  }
-  .navbar {
-    width: 100%;
-    height: 5vh;
-    background-color: black;
-  }
-  .bux {
+
+  .box {
     width: 600px;
     height: 600px;
     box-sizing: border-box;
@@ -48,16 +26,24 @@
     padding: 60px;
     padding-top: 35px;
     border-radius: 20px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.72) 0%, rgba(229, 229, 229, 0.67) 100%);
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.72) 0%,
+      rgba(229, 229, 229, 0.67) 100%
+    );
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(10px);
     border-radius: 20px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.72) 0%, rgba(229, 229, 229, 0.67) 100%);
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.72) 0%,
+      rgba(229, 229, 229, 0.67) 100%
+    );
   }
   .h1 {
     text-align: center;
     margin-top: 45px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     padding: 10px;
   }
   .h2 {
@@ -103,7 +89,7 @@
     margin-left: 10px;
     padding-left: 13px;
     border-radius: 6px;
-    color:rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.5);
   }
   .input5 {
     background-color: white;
@@ -113,9 +99,9 @@
     margin-left: 10px;
     padding-left: 13px;
     border-radius: 6px;
-    color:rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.5);
   }
-  
+
   .box1 {
     background-color: white;
     width: 91.6%;
@@ -128,28 +114,29 @@
     padding-top: 7px;
   }
 
-  .btn1{
+  .btn1 {
     background-color: #616878;
-      width: 25%;
-      padding: 5px;
-      margin-top: 15px;
-      margin-left: 175px;
-      border-radius: 6px;
-      height: 40px;
-      color: white;
+    width: 25%;
+    padding: 5px;
+    margin-top: 15px;
+    margin-left: 175px;
+    border-radius: 6px;
+    height: 40px;
+    color: white;
   }
-  .btn1:hover{
-    background-color: #40444F;
+  .btn1:hover {
+    background-color: #40444f;
     box-shadow: black;
   }
-  input[type="file"]{
-      display: none;
+  input[type="file"] {
+    display: none;
   }
-  .upload1{
-      font-size: 20px;
-      width: 230px;
-      margin-top: 10px;
-      margin-left: 100px;
-      height: 25px;
-      color: rgba(0, 0, 0, 0.5);
+  .upload1 {
+    font-size: 20px;
+    width: 230px;
+    margin-top: 10px;
+    margin-left: 100px;
+    height: 25px;
+    color: rgba(0, 0, 0, 0.5);
   }
+}
