--- a/src/components/DonateAnOrgan/donateAnOrgan.scss
+++ b/src/components/DonateAnOrgan/donateAnOrgan.scss
@@ -139,4 +139,11 @@
     height: 25px;
     color: rgba(0, 0, 0, 0.5);
   }
+  .donation-accepted-container {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
