--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,7 +1,7 @@
 @import "../default.scss";
 
 .header {
-  background-color: #423d3d;
+  background-color: #312F2F;
   height: $header-height;
 
   .header__wrap {
