--- a/src/components/SignUp/index.scss
+++ b/src/components/SignUp/index.scss
@@ -27,8 +27,8 @@
     text-align: center;
     padding-bottom: 40px;
   }
-  .button-block {
-    padding: 8px 0;
+  .button-block-2 {
+    padding: 56px 0;
   }
   .button {
     width: 100px;
