--- a/src/components/Verified/index.scss
+++ b/src/components/Verified/index.scss
@@ -1,26 +1,35 @@
+@import "../default.scss";
+
+.verify-page{
+    background-image: url("../../images/login.svg");
+    background-color: $light-grey;
+    height: calc(100% - $header-height);
+    background-position: 20%;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
 body{
-    background-image:url(/login\ vector\ 1.svg);
     background-size: 700px;
     background-position: left;
     background-repeat: no-repeat;
 }
-
 .container{
     margin-top: 70px;
-    height: 430px;
-    width: 400px;
-    margin-left: 580px;
+    height: 60%;
+    width: 30%;
+    margin-left: 60%;
     background-color:whitesmoke;
     backdrop-filter: blur(76px);
     border-radius: 5px;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.72) 0%, rgba(229, 229, 229, 0.67) 100%);
-box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
-backdrop-filter: blur(20px);
-border-radius: 20px;
-background: linear-gradient(180deg, rgba(255, 255, 255, 0.72) 0%, rgba(229, 229, 229, 0.67) 100%);
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(20px);
+    border-radius: 20px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.72) 0%, rgba(229, 229, 229, 0.67) 100%);
 
 }
-
 h2{
     margin-top:40px ;
     text-align: center;
@@ -29,24 +38,23 @@ h2{
     font-family:Georgia, 'Times New Roman', Times, serif
     
 }
-
-
 .cont2{
     background-color:  #FFFFFF;
-    height:310px;
-    width: 310px;
+    height:250px;
     justify-content: center;
     border-radius: 4px;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 80%;
+    margin-left: 10%;
 }
 
 
 
-.img{
+.photo{
     align-items: center;
+    width : 15%;
 }
 
 p{
@@ -59,7 +67,7 @@ p{
 
 
 input[type=submit]{
-    margin-top: 40px;
+    margin-top: 21px;
     border-radius: 8px;
     background-color: #616878;
     color: ivory;
@@ -78,10 +86,3 @@ input[type=submit]:hover{
     
 
 }
-
-
-
-
-
-
-
