--- a/src/components/PolicyCompliance/index.scss
+++ b/src/components/PolicyCompliance/index.scss
@@ -11,10 +11,10 @@
   position: relative;
 }
 
-.container1 {
-  height: 75%;
+.container10 {
+  height: 400px;
   width: 100%;
-  background-color: whitesmoke;
+  background-color: #ffffff;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(20px);
   border-radius: 20px;
@@ -25,12 +25,26 @@
   );
   margin-left: 5%;
   margin-right: 5%;
-  margin-top: -1%;
-//   margin-bottom: 5%;
+  margin-top: -8%;
+}
+.container2 {
+  height: 25%;
+  width: 100%;
+  background-color: whitesmoke;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(20px);
+  border-radius: 20px;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.72) 0%,
+    rgba(229, 229, 229, 0.67) 100%
+  );
+  margin-right: 5%;
+  margin-top: 5%;
 }
 
 .conta2 {
-    height: 95%;
+    height: 100%;
     justify-content: center;
     border-radius: 4 px;
     display: flex;
@@ -38,15 +52,30 @@
     align-items: center;
     width: 97%;
     margin-left: 2%;
-    margin-top: -5%;
+}
+.conta3 {
+    height: 100%;
+    justify-content: center;
+    border-radius: 4 px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    width: 100%;
+    padding-bottom: 2%;
 }
 
 h3 {
   text-align: left;
   font-size: 24px;
   font-family: Georgia, "Times New Roman", Times, serif;
-  margin-left: 2%;
 }
-p {
-  text-align: center;
+.pg {
+  text-align: justify;
+}
+.photo{
+  width : 2.25%;
+  margin-bottom: -1%;
+  margin-right: 10px;
+  margin-left: 20px;
+  justify-content: center;
 }
