--- a/src/components/DonateAnOrgan/donateAnOrgan.scss
+++ b/src/components/DonateAnOrgan/donateAnOrgan.scss
@@ -49,6 +49,7 @@
   .h2 {
     text-align: center;
     padding-bottom: 17px;
+    margin-top: 0px;
   }
   ::placeholder {
     color: rgba(0, 0, 0, 0.5);
