--- a/src/components/Available/index.scss
+++ b/src/components/Available/index.scss
@@ -1,4 +1,3 @@
-
 .accept {
     padding-right: 0px;
     padding-left: 20px;
@@ -7,10 +6,32 @@
     padding-right: 20px;
     padding-left: 0px;
 }
-
-// padding-top: 4%;
-//     display: flex;
-//     padding-left: 4%;
-//     width: 96%;
-//     flex-flow: column;
-//     height: 96%;
+.css-130xbax-MuiTable-root{
+    top: 50%;
+    position: absolute;
+    transform: translate(50%,-50%);
+    right: 50%;
+    width: 75%;
+    
+}
+.acpt{
+    background-image: url("../../images/donate_an_organ.svg");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 20%;
+  position: relative;
+  
+}
+.bg{
+    backdrop-filter: blur(1px);
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.72) 0%,
+      rgba(229, 229, 229, 0.67) 100%
+    )
+}
+.bg-grey{
+    background-color: #E5E5E5;
+}
